<resources>
    <string name="app_name">MinimaList</string>

    <!-- Activity titles -->
    <string name="title_activity_add_task">Create New Task</string>
    <string name="title_activity_task_details">Task Details</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="title_activity_widget_configure">Configure Widget</string>
    <string name="title_activity_intro">Help</string>

    <!-- Intro/help screen -->
    <string name="intro_title">Let\'s get started</string>
    <string name="intro_done">GOT IT</string>
    <string name="intro_img_error">Error loading image :(</string>

    <!-- Add/edit/delete task strings -->
    <string name="add_task_button">Add Task</string>
    <string name="add_task_name">What is your task?</string>
    <string name="add_task_details">Additional details:</string>
    <string name="add_task_list">Add to list:</string>
    <string name="add_task_due">When is it due?</string>
    <string name="add_task_reminder">Remind me?</string>
    <string name="add_task_date">Set Date</string>
    <string name="add_task_clear">Clear</string>
    <string name="add_task_list_name">Enter name of new list:</string>
    <string name="add_task_no_date">No date selected</string>
    <string name="add_task_repeat">Reminder frequency:</string>
    <string name="add_task_no_list">None</string>
    <string name="add_task_new_list">Add new list</string>
    <string name="add_task_confirmation">New task successfully added</string>
    <string name="edit_task_confirmation">successfully updated</string>
    <string name="delete_task_confirmation">successfully removed</string>
    <string name="deleting_task">Deleting</string>
    <string name="undo_delete">Undo</string>
    <string name="add_task_due_date">%s %d, %d</string>

    <!-- Task details strings -->
    <string name="details_task_name">Task:</string>
    <string name="details_task_details">Additional details:</string>
    <string name="details_reminder">Reminder:</string>
    <string name="details_due">Due date:</string>
    <string name="details_no_reminder">No reminder set</string>
    <string name="details_no_list">No list</string>
    <string name="details_list">List:</string>
    <string name="details_completed">Complete?</string>
    <string name="details_at">at</string>
    <string name="details_date">%s at %s</string>

    <!-- Add/edit list strings -->
    <string name="add_list_title">Add List</string>
    <string name="add_list_name">Enter new list name</string>
    <string name="add_list_add">Add list</string>
    <string name="add_list_cancel">Cancel</string>
    <string name="edit_list_title">Edit List</string>
    <string name="edit_list_save">Save Changes</string>
    <string name="edit_list_delete">Delete List</string>

    <!-- Feedback strings -->
    <string name="feedback_name">What is your name?</string>
    <string name="feedback_type">What type of feedback are you sending?</string>
    <string name="feedback_message">Enter your message here:</string>
    <string name="feedback_hint">Please include relevant details such as phone model, Android version, etc.</string>
    <string name="feedback_submit">Submit</string>
    <string name="feedback_1">Report Bug</string>
    <string name="feedback_2">Request Feature</string>
    <string name="feedback_3">Complaint</string>
    <string name="feedback_4">Praise</string>

    <!-- Navigation drawer strings -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_title">Lists</string>
    <string name="drawer_all">All Tasks</string>
    <string name="drawer_more">More</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_feedback">Send Feedback</string>
    <string name="drawer_help">Help</string>

    <!-- Settings strings -->
    <string name="settings_24h_title">24-Hour Time</string>
    <string name="settings_24h_summary">If selected, all due/reminder dates will be displayed in 24-hour time.</string>
    <string name="settings_color_title">Theme</string>
    <string name="settings_color_summary">Tap to select the main color for the app. Changes will NOT take effect until you restart the app.</string>
    <string name="settings_color_dialog">Select a Color</string>
    <string name="settings_vibration_title">Vibration</string>
    <string name="settings_vibration_summary">If selected, reminders will cause phone to vibrate.</string>
    <string name="settings_led_title">LED Light</string>
    <string name="settings_led_summary">If selected, reminders will cause phone LED light to blink.</string>
    <string name="settings_sound_title">Notification Sound</string>
    <string name="settings_sound_summary">Select a ringtone for reminders (or turn sound off).</string>
    <string name="settings_delete">Delete all tasks and lists</string>
    <string name="settings_general">General Settings</string>
    <string name="settings_notifications">Notification Settings</string>
    <string name="settings_other">Other</string>

    <!-- Dialog strings -->
    <string name="dialog_empty_task">Task name cannot be empty.</string>
    <string name="dialog_empty_list">New list name cannot be empty.</string>
    <string name="dialog_confirmation">Got it</string>
    <string name="dialog_duplicate_list">List name already exists. Please enter a new list name.</string>
    <string name="dialog_discard_task">Are you sure you want to discard this task?</string>
    <string name="dialog_discard_cancel">Keep editing</string>
    <string name="dialog_discard">Discard</string>
    <string name="dialog_discard_changes">Are you sure you want to discard your changes?</string>
    <string name="dialog_delete_confirmation">Are you sure you want to delete this list and all corresponding tasks?</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="dialog_delete_all_confirmation">Are you sure you want to delete all tasks and lists? This cannot be undone.</string>

    <!-- Month abbreviations -->
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>

    <!-- Task row strings -->
    <string name="task_row_no_date">Someday</string>
    <string name="task_row_overdue">Overdue</string>
    <string name="task_row_today">Today</string>
    <string name="task_row_tomorrow">Tomorrow</string>

    <!-- Miscellaneous strings -->
    <string name="tasks_complete">All complete!</string>
    <string name="checkmark_toolbar">Add</string>
    <string name="edit_toolbar">Edit</string>
    <string name="widget_configure_select_list">Select list to display:</string>
    <string name="error">Sorry, something has gone wrong. Please send a bug report so I can fix it ASAP.</string>

</resources>
