<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ellenluo.simpleto_do.EditTaskActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task_name"/>

        <EditText
            android:id="@+id/edit_task_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task_list"/>

        <Spinner
            android:id="@+id/edit_task_list_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/edit_task_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter name of new list:"/>

        <EditText
            android:id="@+id/edit_task_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task_details"/>

        <EditText
            android:id="@+id/edit_task_task_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:maxLines="6"
            android:gravity="top|left"
            android:scrollbars="vertical" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save Changes"
            android:onClick="saveChanges"/>

    </LinearLayout>

</LinearLayout>
