<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ellenluo.simpleto_do.AddTaskActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_task_name" />

            <EditText
                android:id="@+id/add_task_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:maxLines="3"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="When is it due?" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/task_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No date selected"
                        android:textColor="#000000"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/task_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="16dp" />

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setDate"
                    android:text="Set Date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Remind me?" />

                <Switch
                    android:id="@+id/remind_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/remind_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No date selected"
                        android:textColor="#000000"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/remind_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="16dp" />

                </LinearLayout>

                <Button
                    android:id="@+id/remind_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setRemind"
                    android:text="Set Date" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/add_task_list" />

            <Spinner
                android:id="@+id/add_task_list_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/add_task_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter name of new list:" />

            <EditText
                android:id="@+id/add_task_list_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_task_details" />

            <EditText
                android:id="@+id/add_task_task_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:minLines="4"
                android:scrollbars="vertical" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
